# Claude-Compass

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECLINATION.md  README.md  build-exe.ps1  compass  compass.bat  gui_launcher.py  install.ps1  pyproject.toml  run-tests.bat
.github/workflows/: build.yml
release-notes/: v0.2.0.md
src/claude_compass/: __init__.py  __main__.py  app.py  appmodel.py  cli.py  dashboard.py  declination.py  detector.py  hookconfig.py  questions.py  safewrite.py  startup.py  store.py  surfaces.py  sync.py  transcripts.py
tests/: test_app_smoke.py  test_appmodel.py  test_cli.py  test_control.py  test_dashboard.py  test_declination_model.py  test_declination_phase1.py  test_hookconfig.py  test_questions.py  test_safewrite.py  test_startup.py  test_store.py  test_sync.py
