[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-compass"
version = "0.2.0"
description = "Keep every Claude session attuned to you — safely syncs a curated working-style profile into Claude Code and Cowork memory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jack Bhanded" }]
keywords = ["claude", "claude-code", "cowork", "anthropic", "memory", "personalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
gui = ["PySide6>=6.5"]

[project.scripts]
compass = "claude_compass.cli:main"

[project.gui-scripts]
compass-app = "claude_compass.app:main"

[project.urls]
Homepage = "https://github.com/JackBhanded/claude-compass"
Repository = "https://github.com/JackBhanded/claude-compass"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
